--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,34 @@
-background-color {
-  color: red;
-};
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center; 
+  height: 100vh; 
+  margin: 0;
+  overflow: hidden;
+  background: linear-gradient(to bottom, #ff99cc, #9966cc);
+  animation: whirlpool 20s infinite linear;
+}
+
+
+.todo-list {
+  width: 300px; 
+  text-align: center; 
+}
+
+.add-button {
+  background-color: yellowgreen;
+  color: white;
+}
+
+.delete-button {
+  background-color: red; 
+  color: white;
+}
+
+.heading {
+  color: white;
+}
+
+.checkbox {
+  color: white;
+}
